k8s/prod/backend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: backend
  namespace: project-prod

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:

      - name: backend

        image: 622488711452.dkr.ecr.us-west-1.amazonaws.com/task5-backend:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 5000

        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 20
          periodSeconds: 20

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

  strategy:
    canary:
      steps:
      - setWeight: 10

      - pause:
          duration: 60s

      - setWeight: 30

      - pause:
          duration: 120s

      - setWeight: 60

      - pause:
          duration: 180s

      - setWeight: 100
