k8s/prod/frontend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: frontend
  namespace: project-prod

spec:
  replicas: 3

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:

      - name: frontend

        image: 622488711452.dkr.ecr.us-west-1.amazonaws.com/task5-frontend:c958c7f315805ce60ae5380b9bdf1921ca199f43
        imagePullPolicy: Always

        ports:
        - containerPort: 80

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 20

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "300m"
            memory: "256Mi"

  strategy:
    canary:
      steps:
      - setWeight: 10

      - pause:
          duration: 60s

      - setWeight: 30

      - pause:
          duration: 120s

      - setWeight: 60

      - pause:
          duration: 180s

      - setWeight: 100
